# NIRScanner-Python

./: .gitignore  NIRS.py  README.md  test.ipynb  test.py  testplot.py
.ipynb_checkpoints/: NIRS-checkpoint.py  test-checkpoint.ipynb
lib/: _NIRScanner.so.2  _NIRScanner.so.3
src/: API.cpp  API.h  CMakeLists.txt  NIRScanner.cpp  NIRScanner.h  NIRScanner.i  NIRScanner.py  NIRScanner_wrap.cxx  Serial.c  Serial.h  dlpspec.h  dlpspec_calib.h  dlpspec_helper.h  dlpspec_scan.c  dlpspec_scan.h  dlpspec_scan_col.h  dlpspec_scan_had.h  dlpspec_setup.h  dlpspec_types.h  dlpspec_util.h  dlpspec_version.h  evm.cpp  evm.h  list.py  main.cpp  refCalMatrix.h  usb.cpp
src/scripts/: compile_py2.sh  compile_py3.8.sh  compile_py3.sh  run_gdbserver.sh
